--- a/src/routes/agreeMent/agreeMent.css
+++ b/src/routes/agreeMent/agreeMent.css
@@ -2,7 +2,7 @@
     background-color: rgba(15, 12, 27, 0.651); /* 0.8 opacity for slight transparency */
     padding: 2rem;
     max-width: 600px;
-    margin: 2rem auto;
+    margin: 15rem auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
@@ -17,7 +17,7 @@
   }
   
   .agreeMent p {
-    color: #555;
+    color: #ffffff;
     font-size: 16px;
     line-height: 1.6;
     margin-bottom: 1.5rem;
