--- a/src/routes/agreeMent/agreeMent.css
+++ b/src/routes/agreeMent/agreeMent.css
@@ -52,7 +52,7 @@
   
   .buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-between; /* Puts the buttons at opposite sides */
     gap: 1rem;
   }
   
