--- a/src/routes/agreeMent/agreeMent.css
+++ b/src/routes/agreeMent/agreeMent.css
@@ -9,7 +9,7 @@
   }
   
   .agreeMent h2 {
-    color: #333;
+    color: #ffffff;
     font-size: 24px;
     text-align: center;
     margin-bottom: 1.5rem;
@@ -45,7 +45,7 @@
   }
   
   .agreeMent label {
-    color: #333;
+    color: #ffffff;
     font-size: 14px;
     font-weight: 500;
   }
@@ -60,7 +60,7 @@
     background-color: #007bff;
     color: white;
     border: none;
-    padding: 0.75rem 1.5rem;
+    padding: .75rem 5.5rem;
     border-radius: 25px;
     font-size: 16px;
     cursor: pointer;
@@ -69,11 +69,6 @@
   
   .buttons a button:hover {
     background-color: #0056b3;
-  }
-  
-  .buttons a button:disabled {
-    background-color: #d3d3d3;
-    cursor: not-allowed;
   }
   
   .buttons a button.cancel {
