--- a/src/routes/agreeMent/agreeMent.css
+++ b/src/routes/agreeMent/agreeMent.css
@@ -6,6 +6,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     font-family: 'Arial', sans-serif;
+    overflow: hidden;
   }
   
   .agreeMent h2 {
